# edugraph-embed

./: MODEL.md  README.md  pyproject.toml
src/edugraph/: publish_model.py
src/edugraph/embed/: entity_embeddings_infer.py  entity_embeddings_train.py  entity_embeddings_train_old.py
tests/edugraph/embed/: test_entity_embeddings_e2e.py
