[project]
name = "edugraph"
version = "0.1.0"
description = "Generates and embedding model for EduGraph labels"
authors = [{ name = "Christian Bick", email = "christian.bick@edugraph.io" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "owlready2>=0.46,<0.47",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "pillow>=11.3.0",
    "accelerate>=0.33.0",
    "hf-xet>=1.1.7",
    "rdflib>=7.1.4",
    "torch-geometric>=2.6.1",
    "onnxruntime>=1.22.1",
    "torch-onnx>=0.1.25",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "assertpy~=1.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda" },
]
torchvision = [
  { index = "pytorch-cuda" },
]
colpali-engine = { git = "https://github.com/illuin-tech/colpali.git" }
