[project]
name = "edugraph"
version = "0.1.0"
description = "Generates and embedding model for EduGraph labels"
authors = [{ name = "Christian Bick", email = "christian.bick@edugraph.io" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "owlready2~=0.49",
    "torch~=2.8.0",
    "rdflib~=7.5.0",
    "torch-geometric~=2.6.1",
    "onnxruntime~=1.23.2",
    "torch-onnx~=0.1.25",
    "sentence-transformers~=5.2.0",
    "huggingface-hub~=0.23.4",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "assertpy~=1.1",
    "deptry>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda" },
]
torchvision = [
  { index = "pytorch-cuda" },
]
colpali-engine = { git = "https://github.com/illuin-tech/colpali.git" }
